1999-04-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* MessageProbe.m ([MessageProbe -objectDynamicCallOn:]): Permit
	objects to be selectors.

1999-04-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* VarProbe.m: Include swarmconfig.h.
	([VarProbe -probeAsPointer:]): Use PTRUINT instead of locally-defined
	PTRINT.  Remove local definition.

1999-04-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* MessageProbe.m (dynamicCallOn): Use JFINDJAVA instead of
	respondsTo: + JavaProxy check.

1999-04-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* MessageProbe.m: Remove support for avcall; use FArguments/FCall
	support.
	(dynamicCallOn): Cast retVal.val.object to jstring, jobject for
	use with java_copy_string, JFINDOBJC, respectively.

1999-04-24  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* MessageProbe.m (dynamicCallOn): Don't truncate method
	name if there are no colons.

1999-04-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* MessageProbe.m (dynamicCallOn): Add respondsTo: as a sufficient
	condition for trying Java (in additon to target being a JavaProxy).
	Strip off `:' from method signature for Java.
	Handle string and object return conversions.

1999-04-23  Alex Lancaster  <alex@santafe.edu>

	* MessageProbe.m (dynamicCallOn): Use #ifdef HAVE_JDK to protect
	the Java-specific code.
	Likewise protect the #include <directory.h>.

1999-04-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* MessageProbe.m (dynamicCallOn): Call setObjCReturnType on
	FArguments instance.

	* MessageProbe.[hm], objectbase.h ([MessageProbe
	-stringDynamicCallOn:], [MessageProbe -objectDynamicCallOn:],
	[MessageProbe -intDynamicCallOn:]): New methods.

1999-04-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (JAVAINCLUDES): New variable for java/c + @JAVAINCLUDES@.
	(INCLUDES): Use it.

	* MessageProbe.m (dynamicCallOn): Convert ffi version to 
	use FCall/FArguments and support Java.

	* MessageProbe.m ([MessageProbe -setArg:ToString:]): In